--- a/app/templates/Result/setter.latte
+++ b/app/templates/Result/setter.latte
@@ -51,12 +51,12 @@
                             <thead>
                                 <tr>
                                     <th class="noselect" style="width: 50%">Jméno</th>
-                                    <th class="noselect" data-type="numeric">Mahá</th>
-                                    <th class="noselect" data-type="numeric">Big</th>
-                                    <th class="noselect" data-type="numeric">Medium</th>
-                                    <th class="noselect" data-type="numeric">Small</th>
-                                    <th class="noselect" data-type="numeric">Mag</th>
-                                    <th class="noselect" data-type="numeric" data-sort-initial="descending">Body</th>
+                                    <th class="noselect category" data-type="numeric">Mahá</th>
+                                    <th class="noselect category" data-type="numeric">Big</th>
+                                    <th class="noselect category" data-type="numeric">Medium</th>
+                                    <th class="noselect category" data-type="numeric">Small</th>
+                                    <th class="noselect category" data-type="numeric">Mag</th>
+                                    <th class="noselect category" data-type="numeric" data-sort-initial="descending">Body</th>
                                     <th data-hide="all"></th>
                                 </tr>
                             </thead>
