--- a/app/templates/Result/booksOverview.latte
+++ b/app/templates/Result/booksOverview.latte
@@ -42,66 +42,43 @@
                         <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" data-page-size="20" >
                             <thead>
                                 <tr>
-                                    <th class="wide noselect">Jméno</th>
-                                    <th class="noselect">Centrum</th>
-                                    <th class="noselect numeric thin" data-type="numeric" data-sort-ignore="true">Wk</th>
-                                    <th class="noselect numeric" data-type="numeric">Mahá</th>
-                                    <th class="noselect numeric" data-type="numeric">Big</th>
-                                    <th class="noselect numeric" data-type="numeric">Medium</th>
-                                    <th class="noselect numeric" data-type="numeric">Small</th>
-                                    <th class="noselect numeric" data-type="numeric">Mag</th>
-                                    <th class="noselect numeric" data-type="numeric" data-sort-initial="descending">Body</th>
+                                    <th class="wide noselect">Titul</th>
+                                    <th class="wide noselect">Kategorie</th>
+                                    <th data-type="numeric" n:foreach="$centers as $center" title="{$center->title}">{$center->abbreviation}</th>
+                                    <th class="noselect" data-type="numeric">Celkem</th>
                                     <th data-hide="all"></th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr n:foreach="$persons as $person" id="person-{$person->id}">
-                                    {var $distribution = isset($category_distribution[$person->id]) ? $category_distribution[$person->id] : null}
-                                    <td>{$person->name}</td>
-                                    <td>{$person->center->title}</td>
-                                    <td data-category="wk" class="center">{isset($weeks_distribution[$person->id]) ? $weeks_distribution[$person->id] : "."}</td>
-                                    <td data-category="maha">{isset($distribution['Mahá']) ? $distribution['Mahá'] : "."}</td>
-                                    <td data-category="big">{isset($distribution['Big']) ? $distribution['Big'] : "."}</td>
-                                    <td data-category="medium">{isset($distribution['Medium']) ? $distribution['Medium'] : "."}</td>
-                                    <td data-category="small">{isset($distribution['Small']) ? $distribution['Small'] : "."}</td>
-                                    <td data-category="mag">{isset($distribution['Mag']) ? $distribution['Mag'] : "."}</td>
-                                    <td data-category="points">{isset($book_points[$person->id]) ? $book_points[$person->id] : "."}</td>
+
+                                <tr n:foreach="$books as $book" id="book-{$book->id}">
+                                    <td>{$book->title}</td>
+                                    <td>{$book->category->title}</td>
+                                    <td n:foreach="$centers as $center">{isset($centers_distribution[$book->id][$center->id]) ? $centers_distribution[$book->id][$center->id] : "."}</td>
+                                    <td>{isset($books_sum_distribution[$book->id]) ? $books_sum_distribution[$book->id] : "."}</td>
                                     <td style="display: none">
-                                    {form personResultsForm-$person->id}
+                                    {form personResultsForm-$book->id}
                                         <div class="panel-body">
-                                            <div class="panel-group" id="accordion-{$person->id}">
+                                            <div class="panel-group" id="accordion-{$book->id}">
+                                                {foreach $centers as $center}
+                                                {continueIf empty($centers_distribution[$book->id][$center->id])}
                                                 <div class="panel panel-default">
                                                     <div class="panel-heading">
                                                         <h5 class="panel-title">
-                                                            <a data-toggle="collapse" data-parent="#accordion-{$person->id}" href="#collapseOne-{$person->id}">Hlavní knihy</a>
+                                                            <a data-toggle="collapse" data-parent="#accordion-{$center->id}" href="#collapseCenter-{$center->id}">{$center->title}</a>
                                                         </h5>
                                                     </div>
-                                                    <div id="collapseOne-{$person->id}" class="panel-collapse collapse in">
+                                                    <div id="collapseCenter-{$center->id}" class="panel-collapse collapse in">
                                                         <div class="panel-body">
-                                                            {foreach $primary_books as $book}
-                                                            <table class="result-detail">
-                                                                <tr><th>{$book->book->title}</th><td>{isset($book_distribution[$person->id][$book->book_id]) ? $book_distribution[$person->id][$book->book_id] : "0"}</td></tr>
-                                                            </table>
+                                                            {foreach $persons as $person}
+                                                                {if $person->center_id == $center->id && isset($book_distribution[$person->id][$book->id])}
+                                                                    {$person->name}: {$book_distribution[$person->id][$book->id]}
+                                                                {/if}
                                                             {/foreach}
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <div class="panel panel-default">
-                                                    <div class="panel-heading">
-                                                        <h5 class="panel-title">
-                                                            <a data-toggle="collapse" data-parent="#accordion-{$person->id} " href="#collapseTwo-{$person->id}">Vedlejší knihy</a>
-                                                        </h5>
-                                                    </div>
-                                                    <div id="collapseTwo-{$person->id}" class="panel-collapse collapse">
-                                                        <div class="panel-body">
-                                                            {foreach $secondary_books as $book}
-                                                            <table class="result-detail">
-                                                                <tr><th>{$book->book->title}</th><td>{isset($book_distribution[$person->id][$book->book_id]) ? $book_distribution[$person->id][$book->book_id] : "0"}</td></tr>
-                                                            </table>
-                                                            {/foreach}
-                                                        </div>
-                                                    </div>
-                                                </div>
+                                                {/foreach}
                                             </div>
                                             <p class="panel-filler">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
                                         </div>
@@ -111,7 +88,7 @@
                             </tbody>
                             <tfoot>
                                 <tr>
-                                    <td colspan="9">
+                                    <td colspan="10">
                                         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#result_list">Zobrazit výsledkovou listinu</button>
                                         <ul class="pagination pull-right"></ul>
                                     </td>
@@ -189,7 +166,7 @@
     <script src="{$basePath}/js/plugins/dataTables/dataTables.tableTools.min.js"></script>
 
     <!-- FooTable -->
-    <script src="{$basePath}/js/plugins/footable/footable.all.min.js"></script>
+    <script src="{$basePath}/js/plugins/footable/footable.js"></script>
 
     <!-- Date picker -->
     <script src="{$basePath}/js/plugins/datapicker/bootstrap-datepicker.js"></script>
@@ -215,7 +192,7 @@
         $(document).ready(function() {
             $('#overviewTable').footable();
 
-            var weekIntervalPicker = function(input_from, input_to) {
+            var weekIntervalPicker = function(input_from, input_to, ajax_handler) {
                 var week_from, 
                     week_to, 
                     year_from, 
@@ -320,7 +297,7 @@
                             $(input_from).prop('disabled', true);
                             $(input_to).prop('disabled', true);
 
-                            $.get({link overview}, {"week_from": week_from, 
+                            $.get(ajax_handler, {"week_from": week_from, 
                                                     "year_from": year_from,
                                                     "week_to": week_to, 
                                                     "year_to": year_to,
@@ -352,9 +329,10 @@
 
             var picker = new weekIntervalPicker('#week_from_input', '#week_to_input');
             picker.setFrom({$year_from}, {$week_from});
-            picker.setTo({$year_to}, {$week_to});
+            picker.setTo({$year_to}, {$week_to}, {link booksOverview});
             
             redrawScoreTablePrint();
+
         });
     </script>
 {/block}
