--- a/app/templates/Result/booksOverview.latte
+++ b/app/templates/Result/booksOverview.latte
@@ -50,8 +50,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-
-                                <tr n:foreach="$books as $book" id="book-{$book->id}">
+                                <tr n:foreach="$books as $book" n:if="isset($centers_distribution[$book->id])" id="book-{$book->id}">
                                     <td>{$book->title}</td>
                                     <td>{$book->category->title}</td>
                                     <td n:foreach="$centers as $center">{isset($centers_distribution[$book->id][$center->id]) ? $centers_distribution[$book->id][$center->id] : "."}</td>
@@ -89,69 +88,13 @@
                             <tfoot>
                                 <tr>
                                     <td colspan="10">
-                                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#result_list">Zobrazit výsledkovou listinu</button>
                                         <ul class="pagination pull-right"></ul>
                                     </td>
                                 </tr>
                             </tfoot>
                         </table>
-
                         {/snippet}
-                        <div class="modal inmodal fade" id="result_list" tabindex="-1" role="dialog" aria-hidden="true">
-                            <div class="modal-dialog modal-lg">
-                                <div class="modal-content">
-                                    <div class="modal-header">
-                                        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                                        <h4 class="modal-title">Výsledky {$score_title}</h4>
-                                    </div>
-                                    <div class="modal-body">
-	                                    {snippet printTable}
-                                        <table class="score-tableprint footable">
-                                            <caption>Knihy</caption>
-                                            <thead>
-                                                <tr>
-                                                    <th data-type="numeric"   style="border-radius: 2px;">Pos</th>
-                                                    <th>Jméno</th>
-                                                    <th>Centrum</th>
-                                                    <th data-type="numeric">Wk</th>
-                                                    <th data-type="numeric">Mah</th>
-                                                    <th data-type="numeric">Big</th>
-                                                    <th data-type="numeric">Med</th>
-                                                    <th data-type="numeric">Sml</th>
-                                                    <th data-type="numeric">Mag</th>
-                                                    <th data-type="numeric">Mahá & Big</th>
-                                                    <th data-type="numeric" data-sort-initial="descending">Body</th>
-                                                </tr>
-                                            </thead>
-                                            
-                                            <tbody>
-                                                <tr n:foreach="$persons as $person" n:if="isset($book_points[$person->id])">
-                                                    {var $distribution = isset($category_distribution[$person->id]) ? $category_distribution[$person->id] : null}
-                                                    <td></td>
-                                                    <td class="left">{$person->name}</td>
-                                                    <td class="left">{$person->center->title}</td>
-                                                    <td>{isset($weeks_distribution[$person->id]) ? $weeks_distribution[$person->id] : "."}</td>
-                                                    <td>{isset($distribution['Mahá']) ? $distribution['Mahá'] : "."}</td>
-                                                    <td>{isset($distribution['Big']) ? $distribution['Big'] : "."}</td>
-                                                    <td>{isset($distribution['Medium']) ? $distribution['Medium'] : "."}</td>
-                                                    <td>{isset($distribution['Small']) ? $distribution['Small'] : "."}</td>
-                                                    <td>{isset($distribution['Mag']) ? $distribution['Mag'] : "."}</td>
-                                                    <td>{isset($mahabig_distribution[$person->id]) ? $mahabig_distribution[$person->id] : "."}</td>
-                                                    <td>{isset($book_points[$person->id]) ? $book_points[$person->id] : "."}</td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                        {/snippet}
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-white" data-dismiss="modal">Zavřít</button>
-                                        <button type="button" class="btn btn-primary" onclick="printScoreTable();">Tisknout</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
                     </div>
-                    
                 </div>
             </div>
         </div>
