--- a/www/css/scoretable-print.css
+++ b/www/css/scoretable-print.css
@@ -26,7 +26,7 @@ body {
 }
 
 .modal-body {
-    padding: 0 0mm 0 5mm;
+    padding: 0 5mm 0 5mm;
     background-color: transparent;
 }
 
@@ -48,10 +48,15 @@ body {
     margin-left: 6mm;
 }
 
+button.close {
+	display: none;
+}
+
 .score-tableprint {
     width: 100% !important;
     background-color: #FFFFFF;
     border: 1px #000000 solid;
+    border-collapse: collapse;
 }
 
 .score-tableprint caption {
