--- a/app/templates/Result/layout.latte
+++ b/app/templates/Result/layout.latte
@@ -9,6 +9,7 @@
                 <li n:class="$presenter->isLinkCurrent('Result:booksOverview') ? active"><a n:href="Result:booksOverview, $this_week, $this_year, $this_week, $this_year">Knihy</a></li>
             </ol>
 	    </div>
+        <a style="float: right;" class="navbar-minimalize minimalize-styl-2 btn btn-primary" href="#"><i class="fa fa-bars"></i></a>
 	</div>
     <div class="wrapper wrapper-content animated fadeInRight">
         {include content}            
