--- a/www/css/week-picker.css
+++ b/www/css/week-picker.css
@@ -13,7 +13,7 @@
 }
 .datepicker.dropdown-menu .datepicker-days table.table-condensed tbody tr.active td {
   color: #FFFFFF;
-  background-color: #428bca;
+  background-color: #1ab394;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   border-radius: 0;
 }
