--- a/app/templates/Result/booksOverview.latte
+++ b/app/templates/Result/booksOverview.latte
@@ -39,12 +39,29 @@
                             <div id="fountainG_8" class="fountainG"></div>
                         </div>
                         {snippet overviewTable}
+                        {if count($centers_distribution) == 0}
+                        <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" data-page-size="20" >
+                            <thead>
+                                <tr>
+                                    <th class="wide noselect" data-sort-ignore="true">Titul</th>
+                                    <th class="wide noselect" data-sort-ignore="true">Kategorie</th>
+                                    <th data-type="numeric" n:foreach="$centers as $center" title="{$center->title}" data-sort-ignore="true">{$center->abbreviation}</th>
+                                    <th class="noselect" data-type="numeric" data-sort-ignore="true">Celkem</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td class="empty" colspan="10">V tomto období nejsou žádné výsledky</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        {else}
                         <table class="table table-striped table-bordered table-hover toggle-arrow-tiny score-table" id="overviewTable" data-page-size="20" >
                             <thead>
                                 <tr>
                                     <th class="wide noselect">Titul</th>
                                     <th class="wide noselect">Kategorie</th>
-                                    <th data-type="numeric" n:foreach="$centers as $center" title="{$center->title}">{$center->abbreviation}</th>
+                                    <th class="center-title" data-type="numeric" n:foreach="$centers as $center" title="{$center->title}">{$center->abbreviation}</th>
                                     <th class="noselect" data-type="numeric">Celkem</th>
                                     <th data-hide="all"></th>
                                 </tr>
@@ -69,11 +86,15 @@
                                                     </div>
                                                     <div id="collapseCenter-{$center->id}" class="panel-collapse collapse in">
                                                         <div class="panel-body">
-                                                            {foreach $persons as $person}
-                                                                {if $person->center_id == $center->id && isset($book_distribution[$person->id][$book->id])}
-                                                                    {$person->name}: {$book_distribution[$person->id][$book->id]}
-                                                                {/if}
+                                                            {dump $book_distribution[$book->id]}
+                                                            {if isset($book_distribution[$book->id][$center->id])}
+                                                            {foreach $book_distribution[$book->id][$center->id] as $person_distribution}
+                                                                {var $person = $persons[$person_distribution['person_id']]}
+                                                                <table class="result-detail">
+                                                                    <tr><th>{$person->name}</th><td>{$person_distribution['quantity']}</td></tr>
+                                                                </table>
                                                             {/foreach}
+                                                            {/if}
                                                         </div>
                                                     </div>
                                                 </div>
@@ -87,12 +108,18 @@
                             </tbody>
                             <tfoot>
                                 <tr>
+                                    <td colspan="2">TOTAL</td>
+                                    <td n:foreach="$centers as $center">{isset($centers_sum_distribution[$center->id]) ? $centers_sum_distribution[$center->id] : "0"}</td>
+                                    <td>{$allsum_books}</td>
+                                </tr>
+                                <tr>
                                     <td colspan="10">
                                         <ul class="pagination pull-right"></ul>
                                     </td>
                                 </tr>
                             </tfoot>
                         </table>
+                        {/if}
                         {/snippet}
                     </div>
                 </div>
@@ -169,7 +196,7 @@
 
                 function redrawActiveWeek() {
                     var active_tr = $(".datepicker-dropdown table td.cw").filter(function() {
-                        return $(this).text() === selected_week_number;
+                        return $(this).text() == selected_week_number;
                     }).parent();
 
                     active_tr.find('td.active').removeClass('active');
