--- a/www/less/score-table-printview.less
+++ b/www/less/score-table-printview.less
@@ -21,4 +21,39 @@
     th, td {
         text-align: center;
     }
+
+    th.position-column {
+        width: 30px;
+    }
+
+    th.title-column {
+        text-align: left;
+        padding-left: 15px;
+    }
+
+    th.score-column {
+        width: 50px;
+    }
+
+    th.mahabig-column {
+        width: 80px;
+    }
+
+    th.points-column {
+        width: 70px;
+    }
+
+    tfoot {
+        font-weight: bold;
+        border-top: 1px #7D7D7D solid;
+
+        .total {
+            text-align: left;
+            padding-left: 10px;
+        }
+    }
+}
+
+.tableprint_delimiter {
+    height: 30px;
 }
