--- a/www/less/week-picker.less
+++ b/www/less/week-picker.less
@@ -21,7 +21,7 @@
 	tr.active {
 		td {
 			color: #FFFFFF;
-			background-color: #428bca;
+			background-color: #1ab394;
 			text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 			border-radius: 0;
 		}
