--- a/www/less/week-picker.less
+++ b/www/less/week-picker.less
@@ -1,6 +1,7 @@
 .datepicker.dropdown-menu .datepicker-days table.table-condensed tbody {
 	td.cw {
 		font-weight: bold;
+		cursor: pointer;
 	}
 	
 	tr:hover {
