--- a/app/templates/Result/setter.latte
+++ b/app/templates/Result/setter.latte
@@ -16,7 +16,7 @@
             <div class="col-lg-12">
                 <div class="ibox float-e-margins">
                     <div class="ibox-title modified">
-        				<input id="week_from_input" class="form-control week-input" onkeydown="return false"/>
+        				<input id="week_from_input" class="form-control week-input" onkeydown="return false" readonly="true"/>
                         {*
                         <div class="ibox-tools">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
