--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -19,7 +19,7 @@
 	{block head}
 	{/block}
 </head>
-<body>
+<body class="mini-navbar">
     <div id="wrapper">
 	    <nav class="navbar-default navbar-static-side" role="navigation">
 	        <div class="sidebar-collapse">
