--- a/www/less/forms.less
+++ b/www/less/forms.less
@@ -42,6 +42,17 @@ label.tiny-label {
 	}
 }
 
+textarea.form-control {
+	border: 1px solid #e5e6e7;
+
+	&.import-source {
+		font-family: "Courier New";
+		font-size: 13px;
+		width: 700px;
+		height: 300px;
+	}
+}
+
 .icheckbox_square-green {
 	background-color: #FFFFFF !important;
 	margin-right: 5px !important;
@@ -70,4 +81,9 @@ label.tiny-label {
 
 .form-control-static {
 	font-size: 14px;
+}
+
+.upload-control {
+	padding: 0;
+	border: 0;
 }
