--- a/app/templates/Result/layout.latte
+++ b/app/templates/Result/layout.latte
@@ -5,11 +5,11 @@
 	        <h2 n:block="title">Výsledky</h2>
             <ol class="breadcrumb">
                 <li n:class="$presenter->isLinkCurrent('Result:setter') ? active"><a n:href="Result:setter">Zadávání</a></li>
+                <li n:class="$presenter->isLinkCurrent('Result:importSkpn') ? active"><a n:href="Result:importSkpn">Import z SKPN</a></li>
                 <li n:class="$presenter->isLinkCurrent('Result:personsOverview') ? active"><a n:href="Result:personsOverview, $this_week, $this_year, $this_week, $this_year">Osoby</a></li>
                 <li n:class="$presenter->isLinkCurrent('Result:booksOverview') ? active"><a n:href="Result:booksOverview, $this_week, $this_year, $this_week, $this_year">Knihy</a></li>
             </ol>
 	    </div>
-        <a style="float: right;" class="navbar-minimalize minimalize-styl-2 btn btn-primary" href="#"><i class="fa fa-bars"></i></a>
 	</div>
     <div class="wrapper wrapper-content animated fadeInRight">
         {include content}            
