--- a/www/css/style.css
+++ b/www/css/style.css
@@ -291,6 +291,15 @@ label.tiny-label {
 .i-checks label {
   white-space: nowrap;
 }
+textarea.form-control {
+  border: 1px solid #e5e6e7;
+}
+textarea.form-control.import-source {
+  font-family: "Courier New";
+  font-size: 13px;
+  width: 700px;
+  height: 300px;
+}
 .icheckbox_square-green {
   background-color: #FFFFFF !important;
   margin-right: 5px !important;
@@ -316,6 +325,10 @@ label.tiny-label {
 }
 .form-control-static {
   font-size: 14px;
+}
+.upload-control {
+  padding: 0;
+  border: 0;
 }
 .dropdown-form {
   width: 240px;
