--- a/app/templates/Person/form.latte
+++ b/app/templates/Person/form.latte
@@ -16,9 +16,9 @@
                         </div>
                         <div class="hr-line-dashed"></div>
                         <div class="form-group">
-                            <label class="col-sm-2 control-label">Centrum</label>
+                            {label data-center_id, class => "col-sm-2 control-label" /}
                             <div class="col-sm-10">
-                                 <p class="form-control-static">{$center_title}</p>
+                                {input data-center_id, class => "form-control medium"}
                             </div>
                         </div>
                         <div class="form-group">
