--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -19,7 +19,7 @@
 	{block head}
 	{/block}
 </head>
-<body>
+<body class="mini-navbar">
     <div id="wrapper">
 	    <nav class="navbar-default navbar-static-side" role="navigation">
 	        <div class="sidebar-collapse">
@@ -42,19 +42,10 @@
 	                    <div class="logo-element">SKT</div>
 	                </li>
 	                <li n:class="$presenter->isLinkCurrent('Result:*') ? active">
-	                    <a n:href="setter"><i class="fa fa-th-large"></i><span class="nav-label">Výsledky</span><span class="fa arrow"></span></a>
-	                    <ul class="nav nav-second-level collapse">
-	                        <li n:class="$presenter->isLinkCurrent('Result:setter') ? active"><a n:href="Result:setter, $this_week, $this_year">Zadávání</a></li>
-	                        <li n:class="$presenter->isLinkCurrent('Result:personsOverview') ? active"><a n:href="Result:personsOverview, $this_week, $this_year, $this_week, $this_year">Osoby</a></li>
-                            <li n:class="$presenter->isLinkCurrent('Result:booksOverview') ? active"><a n:href="Result:booksOverview, $this_week, $this_year, $this_week, $this_year">Knihy</a></li>
-	                    </ul>
+	                    <a n:href="Result:setter, $this_week, $this_year" title="Výsledky"><i class="fa fa-th-large"></i><span class="nav-label">Výsledky</span><span class="fa arrow"></span></a>
 	                </li>
 	                <li n:class="$presenter->isLinkCurrent('Person:*') ? active">
-	                    <a n:href="add"><i class="fa fa-child"></i><span class="nav-label">Osoby</span><span class="fa arrow"></span></a>
-	                    <ul class="nav nav-second-level collapse">
-	                        <li n:class="$presenter->isLinkCurrent('Person:add') ? active"><a n:href="Person:add">Přidat</a></li>
-	                        <li n:class="$presenter->isLinkCurrent('Person:list') ? active"><a n:href="Person:list">Přehled</a></li>
-	                    </ul>
+	                    <a n:href="Person:list" title="Osoby"><i class="fa fa-child"></i><span class="nav-label">Osoby</span><span class="fa arrow"></span></a>
 	                </li>
 					<li n:class="$presenter->isLinkCurrent('Book:*') ? active">
 	                    <a n:href="Book:list"><i class="fa fa-book"></i><span class="nav-label">Knihy</span><span class="fa arrow"></a>
